--- a/public/index.html
+++ b/public/index.html
@@ -411,6 +411,31 @@
 
     async function playAudio(text) {
       try {
+        // 首先尝试使用 Azure TTS
+        const response = await fetch('/api/tts', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ text })
+        });
+
+        if (response.ok) {
+          const audioBlob = await response.blob();
+          const audioUrl = URL.createObjectURL(audioBlob);
+          const audio = new Audio(audioUrl);
+          await new Promise((resolve, reject) => {
+            audio.onended = () => {
+              URL.revokeObjectURL(audioUrl);
+              resolve();
+            };
+            audio.onerror = reject;
+            audio.play();
+          });
+          return;
+        }
+
+        // 如果 Azure TTS 失败，回退到 Web Speech API
         if ('speechSynthesis' in window) {
           return new Promise((resolve, reject) => {
             const utterance = new SpeechSynthesisUtterance(text);
@@ -425,25 +450,11 @@
             window.speechSynthesis.speak(utterance);
           });
         }
+
         throw new Error('您的浏览器不支持语音合成');
       } catch (error) {
         console.error('Error playing audio:', error);
-
-        if (retryCount < maxRetries) {
-          console.log(`Retrying audio playback (${retryCount + 1}/${maxRetries})...`);
-          await new Promise(resolve => setTimeout(resolve, retryDelay));
-          return playAudio(text, retryCount + 1);
-        }
-
-        let errorMessage = '发音播放失败';
-        if (error.message.includes('429')) {
-          errorMessage = '请求过于频繁，请稍后再试';
-        } else if (error.message.includes('403')) {
-          errorMessage = '请先启用Google Cloud Text-to-Speech API服务';
-        } else if (error.message.includes('503')) {
-          errorMessage = '服务暂时不可用，请稍后再试';
-        }
-        showError(errorMessage);
+        showError('发音播放失败，请稍后重试');
       }
     }
 
